--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@whiskeysockets/baileys": "github:ds6/buils",
     "awesome-phonenumber": "^5.10.0",
     "axios": "^0.24.0",
+    "boxen": "^7.1.1",
     "cfonts": "^2.10.0",
     "ytdl-core": "^4.11.4",
     "chalk": "^4.1.2",
