--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 "jimp": "0.16.1",
     "youtubei": "^1.3.4",
     "@hapi/boom": "^10.0.1",
+"file-type": "^18.0.0",
     "@hiudyy/ytdl": "^0.2.3",
     "acrcloud": "^1.4.0",
     "formdata-node": "^6.0.3",
