--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
 "@hapi/boom": "^10.0.1",
 "file-type": "^18.0.0",
 "@hiudyy/ytdl": "^0.2.3",
+"imagemaker.js": "^2.0.4",
+"url-regex-safe": "^3.0.0",
 "acrcloud": "^1.4.0",
 "formdata-node": "^6.0.3",
 "hispamemes": "^1.0.7",
