Actualizar package.json

--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
 "main": "index.js",
 "type": "module",
 "scripts": {
-"start": "node index.js"
+"start": "node index.js",
+"qr": "node index.js qr",
+"code": "node index.js code",
+"test": "node test.js",
+"test2": "nodemon index.js"
 },
 "author": "Angel",
 "engines": { "node": ">=21.7.3" },
