--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
 "syntax-error":"^1.4.0",
 "ws":"^8.16.0",
 "yargs":"^17.3.1",
-"ytdl-core": "^4.11.4"
+"yt-search": "^2.10.3"
 },
 "devDependencies":{
 "nodemon":"^3.0.0",
