--- a/package.json
+++ b/package.json
@@ -37,9 +37,10 @@
 "mongoose": "^6.2.1",
 "pino":"^8.14.1",
 "syntax-error":"^1.4.0",
+"url-regex-safe":"^3.0.0",
 "ws":"^8.16.0",
 "yargs":"^17.3.1",
-"yt-search": "^2.10.3"
+"yt-search":"^2.10.3"
 },
 "devDependencies":{
 "nodemon":"^3.0.0",
