--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 "@whiskeysockets/baileys":"github:ds6/buils",
 "@hapi/boom":"^10.0.1",
 "awesome-phonenumber":"^5.10.0",
+"acrcloud":"^1.4.0",
 "boxen":"^7.1.1",
 "cfonts":"^3.3.0",
 "chalk":"^4.1.2",
@@ -32,6 +33,7 @@
 "jimp":"0.16.1",
 "lodash":"^4.17.21",
 "lowdb":"^2.1.0",
+"imagemaker.js":"^2.0.4",
 "node-cache":"^5.1.2",
 "node-fetch":"^3.2.0",
 "mongoose": "^6.2.1",
