--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
 "boxen":"^7.1.1",
 "cfonts": "latest",
 "chalk":"^4.1.2",
+"axios-cookiejar-support": "^5.0.1",
+"tough-cookie": "^4.1.3",
 "file-type":"^18.0.0",
 "google-libphonenumber":"3.2.38",
 "jimp":"0.16.1",
