--- a/package.json
+++ b/package.json
@@ -20,15 +20,13 @@
 "plugins":"plugins"
 },
 "dependencies":{
-"@whiskeysockets/baileys":"github:AngelBotsD/buttons",
+"@whiskeysockets/baileys":"github:ds6/buils",
 "@hapi/boom":"^10.0.1",
 "awesome-phonenumber":"^5.10.0",
 "acrcloud":"^1.4.0",
 "boxen":"^7.1.1",
 "cfonts": "latest",
 "chalk":"^4.1.2",
-"axios-cookiejar-support": "^5.0.1",
-"tough-cookie": "^4.1.3",
 "file-type":"^18.0.0",
 "google-libphonenumber":"3.2.38",
 "jimp":"0.16.1",
