--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 "plugins":"plugins"
 },
 "dependencies":{
-"@whiskeysockets/baileys":"npm:wileys",
+"@whiskeysockets/baileys":"github:ds6/buils",
 "@hapi/boom":"^10.0.1",
 "awesome-phonenumber":"^5.10.0",
 "acrcloud":"^1.4.0",
