--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 "jimp":"0.16.1",
 "lodash":"^4.17.21",
 "lowdb":"^2.1.0",
+"cheerio":"^1.0.0-rc.12",
 "imagemaker.js":"^2.0.4",
 "node-cache":"^5.1.2",
 "node-fetch":"^3.2.0",
