--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 "file-type":"^18.0.0",
 "google-libphonenumber":"3.2.38",
 "node-cache":"^5.1.2",
+"chalk": "^4.1.2",
 "pino":"^8.14.1",
 "syntax-error":"^1.4.0",
 "url-regex-safe":"^3.0.0",
