--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 "plugins":"plugins"
 },
 "dependencies":{
-"@whiskeysockets/baileys":"github:ds6/buils",
+"@whiskeysockets/baileys":"github:Ado21/bly",
 "acrcloud":"^1.4.0",
 "file-type":"^18.0.0",
 "google-libphonenumber":"3.2.38",
