--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 "acrcloud":"^1.4.0",
 "file-type":"^18.0.0",
 "google-libphonenumber":"3.2.38",
+"jimp": "^1.6.0",
 "node-cache":"^5.1.2",
 "chalk": "^4.1.2",
 "pino":"^8.14.1",
