--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 "node-cache":"^5.1.2",
 "chalk": "^4.1.2",
 "pino":"^8.14.1",
+"chalk": "^4.1.2",
 "syntax-error":"^1.4.0",
 "url-regex-safe":"^3.0.0",
 "ws":"^8.16.0",
