--- a/package.json
+++ b/package.json
@@ -1,38 +1,22 @@
 {
-"name":"Angel Bot",
-"version":"1.0.0-personalizado",
-"description":"Bot de WhatsApp con Baileys",
-"author":"Angel",
-"type":"module",
-"main":"index.js",
-"scripts":{
-"start": "node index.js"
-},
-"engines":{
-"node":">=21.7.3"
-},
-"directories":{
-"lib":"lib",
-"plugins":"plugins"
-},
-"dependencies":{
-"@whiskeysockets/baileys": "npm:wileys",
-"acrcloud":"^1.4.0",
-"file-type":"^18.0.0",
-"google-libphonenumber":"3.2.38",
-"axios": "^1.6.8",
-"cheerio": "^1.0.0-rc.12",
-"node-cache":"^5.1.2",
-"chalk": "^4.1.2",
-"pino":"^8.14.1",
-"chalk": "^4.1.2",
-"syntax-error":"^1.4.0",
-"url-regex-safe":"^3.0.0",
-"ws":"^8.16.0",
-"yargs":"^17.3.1",
-"yt-search":"^2.10.3"
-},
-"devDependencies":{
-"wa-sticker-formatter":"^4.3.2"
-}
+  "name": "angel-bot",
+  "version": "3.0.0",
+  "type": "module",
+  "engines": {
+    "node": ">=18"
+  },
+  "scripts": {
+    "start": "node --no-deprecation index.js"
+  },
+  "dependencies": {
+    "@whiskeysockets/baileys": "^6.7.0",
+    "chalk": "^5.3.0",
+    "node-cache": "^5.1.2",
+    "pino": "^8.19.0",
+    "yt-search":"^2.10.3",
+    "syntax-error": "^1.4.0",
+    "ws": "^8.16.0",
+    "yargs": "^17.7.2",
+    "google-libphonenumber": "^3.2.33"
+  }
 }
